# llm-chat

./: .gitignore  pyproject.toml
src/: command_handler.py  engine.py  llm_manager.py  main.py  manager.py  setup_engine.py
src/controllers/: build_controllers.py  conversation_loader.py  extras.py  query_answerer.py
src/models/: model_wrapper.py
tests/: test_command_handler.py  test_engine.py
