[tool.poetry]
name = "llm-chat"
version = "0.2.0"
description = "Interfaz de consola para acceder a las APIs de varios LLMs"
authors = ["autosquash <49131885+autosquash@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^0.1.3"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
