[tool.poetry]
name = "llm-chat"
version = "0.5.0"
description = "Text interface to interact with several LLM models"
authors = ["autosquash <49131885+autosquash@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^0.1.3"
rich = "^13.7.1"
openai = "^1.14.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
